12-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: ecommerce
  labels:
    app: backend
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: http
      port: 8080
      targetPort: http
